syntax = "proto3";
package v1;

option go_package = "github.com/decentrio/sorobook-api/types";

message Event {
  string id = 1;
  string contract_id = 2;
  string tx_hash = 3;
  uint32 tx_index = 4;
  string event_type = 5;
  bytes value_xdr = 6;
}

message EventRequest {
  string id =1; 
}

message EventResponse { 
  Event event = 1;
  bool found = 2;
 }